code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__clip_repro_autofollow_wrap.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: combined
---
--- frame 0 ---
 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │    Code  •  Directory: ~/.code/working/code/branches/code-branch-20251006-101336/code-rs/tui   │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘
 › Can you review the last run and summarize the findings?

   Earlier summary: Reviewed files and prepared shell commands.

 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │ What can I code for you this morning?                                                          │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘
   Read Only  (Shift+Tab change)                                                       Ctrl+H help

--- frame 1 ---
 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │    Code  •  Directory: ~/.code/working/code/branches/code-branch-20251006-101336/code-rs/tui   │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘
   Earlier summary: Reviewed files and prepared shell commands.

   Considering recent edits and repo state... Evaluating plan viability.…

 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │ What can I code for you this morning?                                                          │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘
   Read Only  (Shift+Tab change)                             Ctrl+R show reasoning  •  Ctrl+H help

--- frame 2 ---
 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │    Code  •  Directory: ~/.code/working/code/branches/code-branch-20251006-101336/code-rs/tui   │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘
   Earlier summary: Reviewed files and prepared shell commands.

   Considering recent edits and repo state... Evaluating plan viability.…

 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │ What can I code for you this morning?                                                          │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘
   Read Only  (Shift+Tab change)                             Ctrl+R show reasoning  •  Ctrl+H help

--- frame 3 ---
 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │    Code  •  Directory: ~/.code/working/code/branches/code-branch-20251006-101336/code-rs/tui   │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘
   Earlier summary: Reviewed files and prepared shell commands.

   Considering recent edits and repo state... Evaluating plan viability.…

 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │ What can I code for you this morning?                                                          │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘
   Read Only  (Shift+Tab change)                             Ctrl+R show reasoning  •  Ctrl+H help

--- frame 4 ---
 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │    Code  •  Directory: ~/.code/working/code/branches/code-branch-20251006-101336/code-rs/tui   │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘
   Earlier summary: Reviewed files and prepared shell commands.

   Considering recent edits and repo state... Evaluating plan viability.…

 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │ What can I code for you this morning?                                                          │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘
   Read Only  (Shift+Tab change)                             Ctrl+R show reasoning  •  Ctrl+H help

--- frame 5 ---
 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │    Code  •  Directory: ~/.code/working/code/branches/code-branch-20251006-101336/code-rs/tui   │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘
   scroll state and redrawing the composer footer.
   TAIL: stay visible


 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │ What can I code for you this morning?                                                          │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘
   Read Only  (Shift+Tab change)                             Ctrl+R show reasoning  •  Ctrl+H help
