code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_help_overlay_open.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: open
---
 +Settings ▸ Overview-----------------------------------------------------------------------------+
 |                                                                                                |
 | › Model              Model: ZEN5-Coder (Medium)                                                |
 |   + Choose the language model used for new completions.                                        |
 |                                                                                                |
 |   Theme              Theme+----------------------------------------+mond                       |
 |   + Switch between preset |Settings Overview                       |                           |
 |                           |                                        |                           |
 |   Updates            Auto |• ↑/↓  Move between sections            |                           |
 |   + Control CLI auto-updat|• Enter  Open selected section          |                           |
 |                           |• Tab    Jump forward between sections  |                           |
 |   ------------------------|• Esc    Close settings                 |-------------------------- |
 |                           |• ?      Toggle this help               |                           |
 |   Accounts           Auto-|                                        |                           |
 |   + Configure account swit|Press Esc to close                      |.                          |
 |                           +----------------------------------------+                           |
 |   Agents             Enabled: 10/13                                                            |
 |   + Configure linked agents and default task permissions.                                      |
 |                                                                                                |
 | ↑ ↓ Move    Enter Open    Esc Close    ? Help                                                  |
 |                                                                                                |
 +------------------------------------------------------------------------------------------------+


  What would you like to work on?

 Read Only  (Shift+Tab change)                                           Ctrl+G editor  •  API key
